# AutoCDAScorer_Models

./: .gitignore  .lintr  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  pytest.ini
.github/workflows/: lint.yml  test.yml
.pre-commit-hooks/: lint_check.R  style_files.R
analyses/01_generate_base_dataset/: base_dataset_64.qmd
analyses/01_generate_raw_data/01_Allocation_info/: image_info.csv  image_info2.csv  randomised_info.csv  randomised_info_2.csv  rotation_vals.csv  rotation_vals_2.csv  tif_hashes.csv
analyses/01_generate_raw_data/02_Combining_CDAScorer_Outputs/: combine_cdascorer.qmd  combined_CDA_data_1.csv  combined_CDA_data_2.csv
analyses/01_generate_raw_data/03_Checking_Collected_Coords/: combined_CDA_data_checked_1.csv  combined_CDA_data_checked_2.csv  view_each_CDA.qmd  view_each_raw_img.qmd
analyses/01_generate_raw_data/04_Median_and_Centre_Coords/: combined_CDA_data_median.csv  median_and_centre_coords.qmd
analyses/01_generate_raw_data/05_Build_Dataset/: build_dataset.qmd
analyses/02_human_performance_metrics/: anonymisation_key.csv  human_performance.qmd  human_performance_results.csv
analyses/03_generate_base_dataset/: base_dataset_generation.qmd
containers/: TensorFlowGPU_2_21_0.def  test_tensorflow.slurm.sh
data/: combined_cda_data_median.csv
models/00_Miscellaneous/: cnn_find_and_concatenate_results.py  cnn_find_and_concatenate_results.sh
models/01_Base_CNN_RandomSearch/01_Categorical_Loss/: 01_01.py  01_01.slurm.sh  01_01_test.qmd  bench_cpus.py  run_benchmark.sh  run_search.py  run_search.slurm.sh  run_search_test.qmd
models/02_Base_ViT_RandomSearch/01_Categorical_Loss/: bench_cpus.py  run_benchmark.sh  run_search.py  run_search.slurm.sh
scripts/: sync_from_hpc.sh  sync_to_hpc.sh
src/: base_dataset.py  base_dataset_test.py  cnn_base.py  cnn_base_test.py  dataset_preparation.py  dataset_preparation_test.py  human_performance.py  human_performance_test.py  metrics.py  metrics_test.py  model_builders.py  model_builders_test.py  post_training.py  random_search.py  random_search_test.py  results_store.py  results_store_test.py
temp/: cnn_base.py  post_training.py
